<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="motor_settings" Id="{bb47b313-3b6b-46c2-ac80-28198e3a2b8d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	in_motor_pdo		AT%I*: ARRAY[0..1] OF InMotorPDO;
	out_motor_pdo		AT%Q*: ARRAY[0..1] OF OutMotorPDO;	

	motor_interfaces	: ARRAY[0..1] OF MotorInterface[(in_PDO_adr:=ADR(in_motor_pdo[0]),out_PDO_adr:=ADR(out_motor_pdo[0])),
														(in_PDO_adr:=ADR(in_motor_pdo[1]),out_PDO_adr:=ADR(out_motor_pdo[1]))];
	
	pp_scheduler		: ARRAY[0..1] OF MotorPPScheduler[(motor_interface_adr := ADR(motor_interfaces[0])), (motor_interface_adr := ADR(motor_interfaces[1]))];
	csp_scheduler		: ARRAY[0..1] OF MotorCSPScheduler[(motor_interface_adr := ADR(motor_interfaces[0])), (motor_interface_adr := ADR(motor_interfaces[1]))];
	hm_scheduler		: ARRAY[0..1] OF MotorHMScheduler[(motor_interface_adr := ADR(motor_interfaces[0])), (motor_interface_adr := ADR(motor_interfaces[1]))];
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>