<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="robot_settings" Id="{56eb0b9e-b624-4c48-9175-1d2adf27b7ef}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	robot_interface		AT%I*: RobotInterface(	motor_interface_adr:=ADR(motor_settings.motor_interfaces),
											  	pp_scheduler_adr:=ADR(motor_settings.pp_scheduler),
												csp_scheduler_adr:=ADR(motor_settings.csp_scheduler),
												hm_scheduler_adr:=ADR(motor_settings.hm_scheduler));
	// For storing 1_000_000 length trajectories it will take about 8MB. So two trajectories will take no more than 20MB.
	// We applied for a memory that is sufficient for running 1000 sec trajectory.
	// The robot_trajectory_length indicates the indead length of trajectory.
	// Robot trajectory_rotation is the robot's rotation in degree (Not in rad!)
	// Robot's distance is the distance from the center of robot rotor to the center of blade.
	//robot_trajectory_rotation AT%I*: ARRAY[0..1_000_000] OF REAL;
	//robot_trajectory_distance AT%I*: ARRAY[0..1_000_000] OF REAL;
	//robot_trajectory_length AT%I*: UDINT;
	robot_traj_ext : ARRAY [0..1_000_000] OF LREAL;
	robot_traj_rot  : ARRAY [0..1_000_000] OF LREAL;
	// TODO: REMOVE these four temporary variables.
	robot_fb_motor_1 : ARRAY [0..1_000_000] OF LINT;
	robot_fb_motor_2 : ARRAY [0..1_000_000] OF LINT;
	robot_tg_motor_1 : ARRAY [0..1_000_000] OF LINT;
	robot_tg_motor_2 : ARRAY [0..1_000_000] OF LINT;
	
	robot_pp_scheduler		: RobotPPScheduler(robot_interface_adr:=ADR(robot_interface));
	robot_hm_scheduler		: RobotHMScheduler(robot_interface_adr:=ADR(robot_interface));
	robot_traj_scheduler	: RobotTrajScheduler(robot_interface_adr:=ADR(robot_interface),
													robot_trajectory_extension_adr:=ADR(robot_traj_ext),
													robot_trajectory_rotation_adr:=ADR(robot_traj_rot),
													robot_fb_motor_1_adr:=ADR(robot_fb_motor_1),
													robot_fb_motor_2_adr:=ADR(robot_fb_motor_2),
													robot_tg_motor_1_adr:=ADR(robot_tg_motor_1),
													robot_tg_motor_2_adr:=ADR(robot_tg_motor_2));
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>