<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{02236a42-b994-4274-a556-f8eb89138d77}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[/////////////////////////////////////////////////
///    Update motor data from feedback PDO
/////////////////////////////////////////////////
motor_settings.motor_interfaces[0]();
motor_settings.motor_interfaces[1]();
/////////////////////////////////////////////////
///           Motor Scheduler Loop
/////////////////////////////////////////////////
motor_settings.pp_scheduler[0]();
motor_settings.csp_scheduler[0]();
motor_settings.hm_scheduler[0]();
motor_settings.pp_scheduler[1]();
motor_settings.csp_scheduler[1]();
motor_settings.hm_scheduler[1]();
/////////////////////////////////////////////////
///           Update Robot Interface
/////////////////////////////////////////////////
robot_settings.robot_interface();
robot_settings.robot_pp_scheduler();
robot_settings.robot_hm_scheduler();
robot_settings.robot_traj_scheduler();]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="27" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="56" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="31" Count="2" />
      <LineId Id="41" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="61" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>